--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -58,6 +58,7 @@ jobs:
         uses: actions/upload-pages-artifact@v2
         with:
           path: ./public
+          name: github-pages
 
   deploy:
     environment:
