--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -28,19 +28,27 @@ jobs:
       - name: Install Hugo CLI
         run: |
           wget -O ${{ runner.temp }}/hugo.deb https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_linux-amd64.deb \
-          && sudo dpkg -i ${{ runner.temp }}/hugo.deb          
+          && sudo dpkg -i ${{ runner.temp }}/hugo.deb
+          
       - name: Install Dart Sass Embedded
         run: sudo snap install dart-sass-embedded
+
       - name: Checkout
         uses: actions/checkout@v3.5.3
         with:
           submodules: recursive
           fetch-depth: 0
+
+      - name: Setup upload-artifact
+        uses: actions/upload-artifact@v3.1.4
+
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v3.0.6
+
       - name: Install Node.js dependencies
         run: "[[ -f package-lock.json || -f npm-shrinkwrap.json ]] && npm ci || true"
+
       - name: Build with Hugo
         env:
           HUGO_ENVIRONMENT: production
@@ -50,10 +58,12 @@ jobs:
             --gc \
             --minify \
             --baseURL "${{ steps.pages.outputs.base_url }}/"
+
       - name: Check public directory
         run: |
           echo "Checking public directory contents..."
           ls -l ./public
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
