--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -8,72 +8,45 @@ on:
 
 permissions:
   contents: read
-  pages: write
   id-token: write
+  pages: write
 
 concurrency:
   group: "pages"
-  cancel-in-progress: false
-
-defaults:
-  run:
-    shell: bash
+  cancel-in-progress: true
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    env:
-      HUGO_VERSION: 0.147.0
     steps:
-      - name: Install Hugo CLI
-        run: |
-          wget -O ${{ runner.temp }}/hugo.deb https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_linux-amd64.deb \
-          && sudo dpkg -i ${{ runner.temp }}/hugo.deb
-          
-      - name: Install Dart Sass Embedded
-        run: sudo snap install dart-sass-embedded
-
       - name: Checkout
-        uses: actions/checkout@v3.5.3
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
-          submodules: recursive
-          fetch-depth: 0
+          node-version: '20'
 
-      - name: Setup Pages
-        id: pages
-        uses: actions/configure-pages@v3.0.6
-
-      - name: Install Node.js dependencies
-        run: "[[ -f package-lock.json || -f npm-shrinkwrap.json ]] && npm ci || true"
-
-      - name: Build with Hugo
-        env:
-          HUGO_ENVIRONMENT: production
-          HUGO_ENV: production
+      - name: Install Hugo
         run: |
-          hugo \
-            --gc \
-            --minify \
-            --baseURL "${{ steps.pages.outputs.base_url }}/"
+          sudo apt-get update
+          sudo apt-get install hugo -y
 
-      - name: Check public directory
-        run: |
-          echo "Checking public directory contents..."
-          ls -l ./public
+      - name: Build
+        run: hugo --minify
 
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v1.0.7
+        uses: actions/upload-pages-artifact@v2
         with:
           path: ./public
-          name: github-pages
 
   deploy:
+    needs: build
+    runs-on: ubuntu-latest
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v2.0.4
+        uses: actions/deploy-pages@v2
